[gd_scene load_steps=31 format=2]

[ext_resource path="res://RainIsoMainContents/Scenes/Acts.gd" type="Script" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/LevelSelectionScreen.gd" type="Script" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/TheFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/White.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Scenes/LevelSelect.gd" type="Script" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/NihilogueMap.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Music/LevelSelectClicking.mp3" type="AudioStream" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/SignatureMap.png" type="Texture" id=8]
[ext_resource path="res://RainIsoMainContents/Music/SettingsMainSFX.mp3" type="AudioStream" id=11]
[ext_resource path="res://RainIsoMainContents/Scenes/TheActsList.tscn" type="PackedScene" id=12]
[ext_resource path="res://RainIsoMainContents/Music/LevelSelected.ogg" type="AudioStream" id=13]
[ext_resource path="res://RainIsoMainContents/Resources/RainIsoAct01.png" type="Texture" id=23]

[sub_resource type="Animation" id=1]
resource_name = "lavarush"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 608, 256 ), Vector2( 992, 384 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "lavarushBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 0.2 ),
"update": 0,
"values": [ Vector2( 992, 384 ), Vector2( 608, 256 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "melodytown"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 224, 320 ), Vector2( 352, 256 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "melodytownBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 352, 256 ), Vector2( 224, 320 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "neorushcity"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 352, 256 ), Vector2( 608, 256 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "neorushcityBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 608, 256 ), Vector2( 352, 256 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 992, 384 ), Vector2( 224, 320 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "prologueBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Signature:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 224, 320 ), Vector2( 992, 384 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 64
outline_color = Color( 0, 0.968627, 0.376471, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 64
outline_color = Color( 0, 0.713726, 0.968627, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 64
outline_color = Color( 0.258824, 0.258824, 0.258824, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 96
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/lod = 1.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -768 ) ]
}

[sub_resource type="Environment" id=17]
background_mode = 4
glow_enabled = true
glow_levels/3 = false
glow_strength = 1.04
glow_bloom = 0.02
glow_blend_mode = 1
adjustment_enabled = true
adjustment_brightness = 1.05

[sub_resource type="Animation" id=18]

[node name="hud" type="CanvasLayer"]
layer = -1
script = ExtResource( 2 )

[node name="Slots" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Act1" type="Control" parent="Slots"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots/Act1"]
anims/lavarush = SubResource( 1 )
anims/lavarushBack = SubResource( 2 )
anims/melodytown = SubResource( 3 )
anims/melodytownBack = SubResource( 4 )
anims/neorushcity = SubResource( 5 )
anims/neorushcityBack = SubResource( 6 )
anims/prologue = SubResource( 7 )
anims/prologueBack = SubResource( 8 )

[node name="Map" type="TextureRect" parent="Slots/Act1"]
margin_left = 160.0
margin_top = 160.0
margin_right = 1152.0
margin_bottom = 608.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Signature" type="TextureRect" parent="Slots/Act1"]
margin_left = 224.0
margin_top = 320.0
margin_right = 352.0
margin_bottom = 448.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Act2" type="Control" parent="Slots"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Slots/Act2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 192.0
margin_right = -768.0
margin_bottom = -400.0
custom_fonts/font = SubResource( 9 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Slots/Act2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 320.0
margin_right = -768.0
margin_bottom = -272.0
custom_fonts/font = SubResource( 10 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Slots/Act2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 448.0
margin_right = -768.0
margin_bottom = -144.0
custom_fonts/font = SubResource( 11 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Act3" type="Control" parent="Slots"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Slots/Act3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 192.0
margin_right = -768.0
margin_bottom = -400.0
custom_fonts/font = SubResource( 9 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Slots/Act3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 320.0
margin_right = -768.0
margin_bottom = -272.0
custom_fonts/font = SubResource( 10 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Slots/Act3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 448.0
margin_right = -768.0
margin_bottom = -144.0
custom_fonts/font = SubResource( 11 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Act4" type="Control" parent="Slots"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Slots/Act4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 192.0
margin_right = -768.0
margin_bottom = -400.0
custom_fonts/font = SubResource( 9 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Slots/Act4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 320.0
margin_right = -768.0
margin_bottom = -272.0
custom_fonts/font = SubResource( 10 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Slots/Act4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 448.0
margin_right = -768.0
margin_bottom = -144.0
custom_fonts/font = SubResource( 11 )
text = "???"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Acts" type="Control" parent="Slots"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Act1" type="Label" parent="Slots/Acts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.0
margin_top = 16.0
margin_right = -725.0
margin_bottom = -592.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Act 1 - "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Slots/Acts/Act1"]
margin_left = 288.0
margin_top = -16.0
margin_right = 768.0
margin_bottom = 112.0
texture = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Act2" type="Label" parent="Slots/Acts"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.0
margin_right = -795.0
margin_bottom = -592.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Act 2 -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Act3" type="Label" parent="Slots/Acts"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.0
margin_right = -791.0
margin_bottom = -592.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Act 3 -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Act4" type="Label" parent="Slots/Acts"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.0
margin_right = -793.0
margin_bottom = -592.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Act 4 -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="TextureRect" parent="Slots"]
visible = false
show_behind_parent = true
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Slots"]
show_behind_parent = true
margin_right = 1280.0
margin_bottom = 768.0
mouse_filter = 2
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TheActsList" parent="." instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0 )
margin_bottom = 6.10352e-05

[node name="Container" parent="TheActsList" index="0"]
rect_scale = Vector2( 1e-05, 1e-05 )

[node name="Buttons" parent="TheActsList" index="1"]
position = Vector2( 0, -768 )

[node name="AnimationPlayer" parent="TheActsList" index="2"]
anims/transition = SubResource( 16 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Audio" type="Node" parent="."]

[node name="ActSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
volume_db = -0.027
pitch_scale = 1.61
bus = "SFX"

[node name="SelectedSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 13 )
bus = "SFX"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 18 )

[connection signal="pressed" from="TheActsList/Buttons/Act1" to="." method="_on_Act1_pressed"]

[editable path="TheActsList"]
